# cpp_gpio

./: .gitignore  CMakeLists.txt  README.md
include/: BeagleBone.h  Gpio.h
src/: Gpio.cpp  main.cpp
